# Covid_project

./: .gitignore  01_data_exploration.py  02_data_merging.py  03_calculate_per_capita.py  04_visualize_results.py  Dockerfile  INIT_PY_GUIDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: Ci.yml
airflow-infra/logs/scheduler/: latest
covid_etl/: 02_data_merging.py  03_calculate_per_capita.py  04_visualize_results.py  __init__.py  calculate_per_capita.py  data_exploration.py  data_merging.py  visualize_results.py
data/: country_summary.csv  covid_cases_per_100k.csv  monthly_summary.csv
sql-snippets/: country_summary.sh  csv_to_postgres.py  local_postgres.sql  monthly_deaths.sql  monthly_summary.sh  top_deaths_spring2020.sql  verify_data.py
zero-math-week3/Days/: Day18.py  Day19.py  Day20.py
