[project]
name = "covid-project"
version = "0.1.0"
description = "COVID-19 Data Analysis and Visualization Pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
population_csv = 'https://raw.githubusercontent.com/datasets/population/master/data/population.csv'
