[project]
name = "covid-project"
version = "0.1.0"
description = "COVID-19 Data Analysis and Visualization Pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
]
[tool.setuptools.packages]
find = { include = ["covid_etl", "data", "plots"] }
